@@ -1,4 +1,4 @@
-/*	$NetBSD: admin.c,v 1.12 2006/09/26 21:10:55 manu Exp $	*/
+/*	$NetBSD: admin.c,v 1.13 2006/09/30 15:51:42 manu Exp $	*/
 
 /* Id: admin.c,v 1.25 2006/04/06 14:31:04 manubsd Exp */
 
@@ -525,12 +525,6 @@ admin_process(so2, combuf)
 out:
 	if (buf != NULL)
 		vfree(buf);
-
-	if (key != NULL)
-		vfree(key);
-
-	if (id != NULL)
-		vfree(id);
 
 	return error;
 }
